--- a/buttons.css
+++ b/buttons.css
@@ -18,6 +18,7 @@ button{
   width: 40px;
   align-content: center;
   transition: all 0.15s ease-in-out;
+  z-index: 100;
 }
 .rock:hover, .paper:hover, .scissors:hover,
 .rock:active, .paper:active, .scissors:active{
